fix: scroll issue on iOS

--- a/src/dotnet/UI.Blazor/Components/VirtualList/virtual-list.css
+++ b/src/dotnet/UI.Blazor/Components/VirtualList/virtual-list.css
@@ -3,6 +3,7 @@
     overflow-y: scroll;
     -ms-overflow-style: none;
     scrollbar-width: none;
+    scroll-behavior: smooth; /* This is absolutely required on iOS, otherwise you get tons of visual issues */
 }
 
 .virtual-list::-webkit-scrollbar {
